infra/op-replica/kustomize/public-overlays/mainnet-replica-0-5-8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainnet-replica-0-5-8
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: mainnet-replica-history
    networking.gke.io/managed-certificates: mainnet-replica-0-5-8
spec:
  rules:
  - host: mainnet-replica-0-5-8.optimism.io
    http:
      paths:
      - backend:
          service:
            name: l2geth-replica
            port:
              name: rpc
        path: /
        pathType: ImplementationSpecific
